--- a/src/components/sidebar.mdx
+++ b/src/components/sidebar.mdx
@@ -1,8 +1,8 @@
 - [Home](/)
 - [Opportunities](/opportunities)
 - [Events](/events)
-- [Articles](/articles)
+- [News](/articles)
 - [Roadmap](/roadmap)
-- [Resources](/resources)
+- [Directory](/resources)
 - [Courses](/courses)
 - [Contact](/contact)
