fixing contact page

--- a/src/components/sidebar.mdx
+++ b/src/components/sidebar.mdx
@@ -3,6 +3,6 @@
 - [Events](/events)
 - [News](/articles)
 - [Roadmap](/roadmap)
-- [Directory](/resources)
+- [Directory](/directory)
 - [Courses](/courses)
 - [Contact](/contact)
